--- a/tootoo2/r1/tootoo2-r1.html
+++ b/tootoo2/r1/tootoo2-r1.html
@@ -9,17 +9,166 @@
 <meta name=date content='2016-11-05' >
 </head>
 <body>
+<script src=https://cdn.rawgit.com/showdownjs/showdown/master/dist/showdown.min.js ></script>
 <script>
 // Copyright 2017 Jaanga authors ~ MIT license
 
-	let user = {
+	var users = {};
+	var user;
+
+	users.d3 = {
+		user : 'd3',
+		repo : 'd3',
+		branch : 'master',
+		folder : '',
+		rawgit: true
+//		noIndex: true
+	};
+	users.d3GH = {
+		user : 'd3',
+		repo : 'd3.github.com',
+		branch : 'master',
+		folder : '',
+		rawgit: true
+	};
+	users.jDemo = {
+		user: 'jaanga',
+		repo: 'jaanga.github.io',
+		branch: 'master',
+		folder: 'demo'
+	};
+	users.jTerrain = {
+		user: 'jaanga',
+		repo: 'terrain3',
+		branch: 'gh-pages',
+		folder: ''
+	};
+	users.jaanga = {
+		user : 'jaanga',
+		repo : 'jaanga.github.io',
+		branch : 'master',
+		folder : ''
+	};
+	users.jupyter = {
+		user : 'jupyter',
+		repo : 'jupyter.github.io',
+		branch : 'master',
+		folder : '',
+		rawgit: true
+	};
+	users.jupyterNotebook = {
+		user : 'jupyter',
+		repo : 'notebook',
+		branch : 'master',
+		folder : '',
+		rawgit: true
+	};
+	users.ladybugDynamo = {
+		user : 'ladybug-tools',
+		repo : 'ladybug-dynamo',
+		branch : 'gh-pages',
+		folder : ''
+	};
+	users.ladybugWeb = {
+		user : 'ladybug-tools',
+		repo : 'ladybug-web',
+		branch : 'gh-pages',
+		folder : ''
+	};
+	users.leader = {
+		user : 'leaderphotos',
+		repo : 'leaderphotos.github.io',
+		branch : 'master',
+		folder :''
+	};
+	users.mrdoob = {
+		user : 'mrdoob',
+		repo : 'three.js',
+		branch : 'dev',
+		folder : '',
+		rawgit: true
+	};
+	users.paulmasson = {
+		user : 'paulmasson',
+		repo : 'paulmasson.github.io',
+		branch : 'master',
+		folder : ''
+	};
+	users.pushmePullyou = {
+		user : 'pushme-pullyou',
+		repo : 'pushme-pullyou.github.io',
+		branch : 'master',
+		folder : '',
+		noIndex: true,
+		rawgit: null
+	};
+	users.pushmePullyouTooTo = {
+		user : 'pushme-pullyou',
+		repo : 'pushme-pullyou.github.io',
+		branch : 'master',
+		folder : 'tootoo',
+		noIndex: true,
+		rawgit: null
+	};
+	users.sagemathGH = {
+		user : 'sagemath',
+		repo : 'sagemath.github.io',
+		branch : 'master',
+		folder : ''
+	};
+	users.sagemathCell = {
+		user : 'sagemath',
+		repo : 'sagecell',
+		branch : 'gh-pages',
+		folder : ''
+	};
+	users.sagemathSageDev = {
+		user : 'sagemath',
+		repo : 'sage',
+		branch : 'develop',
+		folder : '',
+		rawgit: true
+	};
+	users.sagemathDocs = {
+		user : 'sagemath',
+		repo : 'documentation',
+		branch : 'gh-pages',
+		folder : 'html'
+	};
+	users.sagemathPlanet = {
+		user : 'sagemath',
+		repo : 'planet',
+		branch : 'gh-pages',
+		folder : ''
+	};
+	users.theoArmour = {
+		user : 'theo-armour',
+		repo : 'drawing',
+		branch : 'master',
+		folder : '',
+		noIndex: true
+	};
+	users.user = {
 		user : 'prediqtiv',
 		subText : 'Invest smarter',
 		repo : 'prediqtiv.github.io',
 		branch : 'master',
 		folder : '',
-		noIndex : true
+		defaultFile : 'README.md'
 	};
+/*
+	users. = {
+		user : '',
+		repo : '',
+		branch : '',
+		folder : ''
+	};
+
+*/
+
+	let editor, files;
+
+	let userStart = 'd3';
 
 	let b = '<br>';
 
@@ -27,34 +176,9 @@
 
 	function init() {
 
-		let css, container, contents, hamburger, menu;
-		let txt = '<p>lorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem. ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?</p>';
+		let container, contents, hamburger, menu;
 
-		css = document.body.appendChild( document.createElement('style') );
-		css.innerHTML =
-			'body { font: 12pt monospace; margin: 0; }' +
-			'a { color: crimson; text-decoration: none; }' +
-			'a:hover { text-decoration: underline; }' +
-
-			'button, input[type=button] { background-color: #ccc; border: 2px #fff solid; color: #322; }' +
-			'input[type=range] { -webkit-appearance: none; -moz-appearance: none; background-color: #ddd; width: 160px; }' +
-			'input[type=range]::-moz-range-thumb { background-color: #888; border-radius: 0; width: 10px; }' +
-			'input[type=range]::-webkit-slider-thumb { -webkit-appearance: none; background-color: #888; height: 20px; width: 10px; }' +
-
-			'summary { outline: none; }' +
-			'summary h3 { display: inline; }' +
-
-			'.popUp { background-color: white; left: 300px; border: 1px solid red; opacity: 1.0; padding: 5px; position: absolute; width: 120px; z-index: 10; }' +
-			'#bars { color: crimson; cursor: pointer; font-size: 24pt; text-decoration: none; }' +
-			'#container { left: 0; position: absolute; transition: left 1s; width: 100%;}' +
-
-			'#contents { border: 1px #ccc solid; left: 375px; max-width: 800px; position: absolute; }' +
-
-			'#hamburger { background-color: #eee; left: 325px; position: absolute; top: 20px; }' +
-			'#hamburger h2 { margin: 0; }' +
-			'#menu { background-color: #eee; border: 1px #ccc solid; padding: 0 10px; position: absolute; width: 300px; }' +
-			'#menu h2 { margin: 0; }' +
-		'';
+		setCSS();
 
 		container = document.body.appendChild( document.createElement( 'div' ) );
 		container.id = 'container';
@@ -70,19 +194,23 @@
 
 				'<div class=popUp id=popHelp style=display:none; ><p>Hi there!</p>Click the i-in-circle, info icon for latest updates.</div>' +
 
+				'<p><small>' + document.head.querySelector( "[name=description]" ).content  + '</small></p>' +
+
+					'<summary><h3>Select User/ Repo/ Branch </h3></summary>' +
+
+						'<select id=SELselUser onchange=initUser(this.value); title="Select user" size=15 style=width:100%;  >' +
+
+						'</select>' + b +
+					b +
+
+				'</details>' +
+
 				'<details open>' +
 
 					'<summary><h3>Menu</h3></summary>' +
 
-					'<p>' +
-						'This is a template or boilerplate file that is frequently used to start-off a Jaanga projects.' +
-					'</p>' +
-
-					'<p>' +
-						'<button onclick=doIt(); > Button 3 </button>' +
-					'</p>' +
-
-					'<div id=menuInfo ></div>' +
+					'<div id=breadcrumbs ></div>' +
+					'<div id=menuItems ></div>' +
 
 				'</details>' +
 
@@ -92,55 +220,400 @@
 				'<div id=bars title="Click this hamburger to slide the menu" > &#9776 </div>' +
 			'</div>' +
 
-			'<div id=contents ><iframe id=ifr src=https://prediqtiv.github.io/prediqtiv.github.io/README.md height=900 width=800 ></iframe></div>' +
+			'<div id=contents ></div>' +
 
 		'';
 
 		if ( window.self !== window.top ) { container.style.left = '-325px'; }
 
-		getFolderContents();
+		getMenuSelectUserOptions();
+
+		initUser( userStart );
+
+		getButtons();
+//		getFolderContents();
+
 	}
 
 
-	function getFolderContents() {
+	function setCSS() {
 
-		var fileName;
+		let css, container, contents, hamburger, menu;
+		const b = '<br>';
 
-		fileName = 'https://api.github.com/repos/prediqtiv/prediqtiv.github.io/contents/';
+		css = document.body.appendChild( document.createElement('style') );
+		css.innerHTML =
+			'html, body { font: 12pt monospace; height: 100%; margin: 0; }' +
+			'a { color: crimson; text-decoration: none; }' +
+			'a:hover { text-decoration: underline; }' +
+			'button, input[type=button] { background-color: #ccc; border: 2px #fff solid; color: #322; }' +
+			'pre, blockquote { background-color: #eee; padding: 10px; }' +
+			'summary { outline: none; }' +
+			'summary h3 { display: inline; }' +
+
+			'.popUp { background-color: white; border: 1px solid red; left: 180px; opacity: 1.0; padding: 5px; position: absolute; width: 120px; z-index: 10; }' +
+
+			'#bars { color: crimson; cursor: pointer; font-size: 24pt; text-decoration: none; }' +
+
+			'#container {  height: 100%; left: 0; position: absolute; transition: left 1s; width: 100%; }' +
+
+// let each type of contents decide its best width and placement
+			'#contents { border: 0px #ccc solid; height: 100%; left: 325px; position: absolute; width: ' + ( window.innerWidth - 325 ) + 'px; }' +
+
+			'#editButton { background-color: #555; color: #fff; opacity: 0.5; padding: 8px; position: fixed; right: 20px; top: 20px; }' +
+			'#editButton a { text-decoration: none; color: #fff; }' +
+
+			'#hamburger { background-color: #eee; left: 325px; position: absolute; top: 20px;  z-index: 1 }' +
+
+			'#menu { background-color: #eee; border: 1px #ccc solid; box-sizing:border-box; height: 100%; overflow-y: auto; padding: 0 10px; position: fixed; width: 325px; }' +
+
+			'#nextFile { color: #888; font-size: 36pt; opacity: 0.5; padding: 8px; position: fixed; right: 20px; top: ' + (0.5 * window.innerHeight ) + 'px; }' +
+
+			'#previousFile { color: #888; font-size: 36pt; opacity: 0.5; padding: 8px; position: fixed; margin-left: 350px; top: ' + (0.5 * window.innerHeight ) + 'px; }' +
+
+			'#hamburger h2, #menu h2, #menu h4 {margin: 0; }' +
+			'#menuBreadcrumbs h2, #menuBreadcrumbs h3 { font-size: 14pt; margin: 0; }' +
+			'#editButton:hover, #previousFile:hover, #nextFile:hover { cursor: pointer; opacity: 1; }' +
+			'#nextFile a, #previousFile a { text-decoration: none; color: #888; }' +
+
+		'';
+
+	}
+
+
+	function getMenuSelectUserOptions(){
+
+		var user;
+		users.keys = Object.keys( users );
+
+		for ( var i = 0; i < users.keys.length; i++ ) {
+
+			user = users[ users.keys[ i ] ];
+
+			SELselUser[ i ] = new Option( user.user + ' ' + user.repo + ' ' + user.folder + ' ' + user.branch, users.keys[ i ] );
+
+		}
+
+		SELselUser.selectedIndex = users.keys.indexOf( userStart );
+
+	}
+
+
+	function initUser( usr ) {
+
+		user = users[ usr ];
+
+		if ( user.rawgit ) {
+
+			urlGHPages = 'https://rawgit.com/' + user.user + '/' + user.repo + '/' + user.branch + '/';
+
+		} else {
+
+			urlGHPages = 'https://' + user.user + '.github.io/' + user.repo + '/';
+
+		}
+
+		getFolderContents();
+
+	}
+
+
+
+	function getFolderContents( path ) {
+
+		let fileName;
+
+		fileName = 'https://api.github.com/repos/' + user.user + '/' + user.repo + '/contents/' + ( path ? path : '' );
+
+		setBreadcrumbs( path );
 
 		requestFile( fileName, callbackFolderContents );
 
-
 	}
 
-	function callbackFolderContents( xhr) {
 
-//		let response, text, urlGHPages;
+	function callbackFolderContents( xhr ) {
 
-		urlGHPages = 'https://' + user.user + '.github.io/' + user.repo + '/' ;
+		let response, items, item, count;
 
 		response = xhr.target.response;
-		objs = JSON.parse( response );
+		items = JSON.parse( response );
 
-		for ( var i = 0; i < objs.length; i++ ) {
+		files = [];
+		count = 0;
+		menuItems.innerHTML = '';
 
-			obj = objs[ i ];
+		for ( let i = 0; i < items.length; i++ ) {
 
-			menuInfo.innerHTML +=
+			item = items[ i ];
 
-				'<a href=# onclick=ifr.src="' + urlGHPages + obj.path + '" >' + obj.name + ' ' + obj.type + '</a>' + b +
-			'';
+			if ( item.type === 'dir' ) {
+
+				menuItems.innerHTML +=
+					'<a href=# onclick=getFolderContents("' + item.path  + '"); > 🗀 ' + item.name  + '</a>' + b +
+				'';
+
+			}
 
 		}
+
+		for ( i = 0; i < items.length; i++ ) {
+
+			item = items[ i ];
+
+			if ( item.type === 'file' ) {
+
+				menuItems.innerHTML +=
+//					'<a href=# onclick=ifr.src="' + urlGHPages + '/' + item.path + '"; >' + item.name  + '</a>' + b +
+					'<a href=# id=file' + count++ + ' onclick=getFileSetContents("' + item.path + '"); > ' + item.name + '</a>' + b +
+
+				'';
+
+				files.push( item.path );
+
+			}
+
+		}
+
+//		getFileSetContents( user.defaultFile );
+		setDefaultContents();
+
+	}
+
+	function setDefaultContents() {
+
+		let txt, start, file;
+
+		for ( var i = 0; i < files.length; i++ ) {
+
+			file = files[ i ]
+
+			if ( file.toLowerCase() === 'index.html' ) { getFileSetContents( file ); return; }
+			if ( file.toLowerCase() === 'readme.md' ) { getFileSetContents( file ); return; }
+
+		}
+
+		getFileSetContents( files[ 0 ]  );
+
+	}
+
+
+	function getButtons() {
+
+		editButton = document.body.appendChild( document.createElement( 'div' ) );
+		editButton.id = 'editButton';
+		editButton.innerHTML = 'Edit';
+		editButton.title = 'Update this page using the GitHub source code editor';
+
+		nextFile = document.body.appendChild( document.createElement( 'div' ) );
+		nextFile.id = 'nextFile';
+		nextFile.innerHTML = '&gt;';
+		nextFile.title = 'Next file';
+
+		previousFile = container.appendChild( document.createElement( 'div' ) );
+		previousFile.id = 'previousFile';
+		previousFile.innerHTML = '&lt;';
+		previousFile.title = 'Previous file';
+
+	}
+
+
+	function setBreadcrumbs( path ) {
+
+		let name, txt, folders, str;
+
+		name = user.folder ? user.folder : user.repo;
+
+		txt = '<h3><a href=JavaScript:getFolderContents(); >' + name + '</a> &raquo; </h3>';
+
+		folders = path ?  path.split( '/' ) : [] ;
+
+		str = '';
+
+		for ( let i = 0; i < folders.length; i++ ) {
+
+			str += folders[ i ] + '/';
+
+			txt += '<h3><a href=JavaScript:getFolderContents("' + str.slice( 0, -1 ) + '"); >' + folders[ i ] + '</a> &raquo; </h3>';
+
+		}
+
+		breadcrumbs.innerHTML = txt;
+
+	}
+
+
+	function setButtons ( path ) {
+
+		if ( editButton ) {
+
+			folder = user.folder ? user.folder + '/' : '';
+
+			editButton.innerHTML = '<a href="https://github.com/' + user.user + '/' + user.repo + '/blob/' + user.branch + '/' + folder + path + '" target="_blank"> Edit </a>';
+
+		}
+
+		index = files.indexOf( path );
+
+		for ( let i = 0; i < files.length; i++ ) {
+
+			el = document.getElementById( 'file' + i );
+
+			col = ( i === index )  ? '#ccc' : '';
+
+			el.style.backgroundColor = col;
+
+		}
+
+		indexNext = index + 1;
+
+		if ( index >= files.length - 1 ) { indexNext = 0; }
+
+		indexPrevious = index - 1;
+
+		if ( index <= 0 ) { indexPrevious = files.length - 1; }
+
+		if ( nextFile || previousFile ) {
+
+			nextFile.innerHTML = '<a href=JavaScript:getFileSetContents("' + files[ indexNext ] + '"); > &gt; </a>';
+
+			previousFile.innerHTML = '<a href=JavaScript:getFileSetContents("' + files[ indexPrevious ] + '"); > &lt; </a>';
+
+		} else {
+
+
+		}
+
 	}
 
 
 
+	function getFileSetContents( path ) {
+
+		let url, u;
+
+		if ( path === undefined ) {
+
+			contents.innerHTML = '<center>no files in this folder</center>';
+			return;
+
+		}
+
+		url = urlGHPages + path;
+
+		u = url.toLowerCase();
+
+		if ( u.endsWith( '.md' ) ){
+
+			getFileMD( url );
+
+		} else if ( u.endsWith( '.html' ) || u.endsWith( '.htm' ) ) {
+
+			getFileHTML( url );
+
+		} else if ( u.endsWith( '.gif' ) || u.endsWith( '.ico' ) || u.endsWith( '.jpg' ) || u.endsWith( '.png' ) ||  u.endsWith( '.svg' ) ) {
+
+			getFileImage( url );
+
+		} else {
+
+			getFileCode( url );
+
+		}
+
+		setButtons( path );
+
+	}
+
+
+	 function getFileHTML( url ){
+
+		contents.innerHTML =
+			'<iframe id=ifr src=' + url + ' width=' + ( window.innerWidth - 325 ) + ' height=' + ( window.innerHeight - 5 ) +
+			' style="border:0 none; " >' +
+		'<iframe>';
+
+	}
+
+
+
+	function getFileMD( url ) {
+
+// https://github.com/showdownjs/showdown
+
+		showdown.setFlavor('github');
+
+		let converter = new showdown.Converter();
+
+		requestFile( url, callbackMD );
+
+		function callbackMD( xhr ) {
+
+			contents.innerHTML =
+
+			'<div style="border: 0px red solid; margin: 0 auto; width: 800px; position: relative;" >' +
+				converter.makeHtml( xhr.target.response ) +
+			'</div>';
+
+		}
+
+	}
+
+
+	 function getFileImage( url ){
+
+		contents.innerHTML =
+			'<img id=image src="' + url +
+			'" style="border: 0px solid gray; margin: 25px 0 0 50px; max-width: 800px; " >';
+
+	}
+
+
+	 function getFileCode( url ) {
+
+		contents.innerHTML =
+			'<div id=contentsCode style="border: 0px red solid; height: 900px; margin: 0 auto; width: 900px; position: relative;" >' +
+			' item will appear here ' +
+		'</div>';
+
+		if ( editor ) {
+
+			setEditContents();
+
+		} else {
+
+// check here for latest: https://cdnjs.com/libraries/ace/
+// Anyway to get latest automatically?
+// use GitHub code embed??
+
+			editor = document.body.appendChild( document.createElement( 'script' ) );
+			editor.onload = setEditContents;
+			editor.src = 'https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.6/ace.js';
+
+		}
+
+		function setEditContents() {
+
+			editor = ace.edit( 'contentsCode' );
+			editor.$blockScrolling = Infinity;
+			editor.getSession().setMode( 'ace/mode/markdown' );
+
+			requestFile( url, callback );
+
+			function callback( xhr ) {
+
+				editor.setValue( xhr.target.response.slice( 0, 10000 ), -1 );
+
+			}
+
+		}
+
+	}
 
 
 	function requestFile( fileName, callback ) {
 
-//		var fileName, text, lines;
+		var fileName, text, lines;
 
 		xhr = new XMLHttpRequest();
 		xhr.crossOrigin = 'anonymous';
@@ -148,7 +621,6 @@
 		xhr.onerror = function( xhr ) { console.log( 'error', xhr  ); };
 		xhr.onload = callback;
 		xhr.send( null );
-
 
 	}
 
