--- a/tootoo-users/prediqtiv-alpha-vantage/pav.html
+++ b/tootoo-users/prediqtiv-alpha-vantage/pav.html
@@ -6,10 +6,10 @@
 <meta name = "description" content = "List and view all the files in all the folders. File wrangler. Default index.html file. Opens HTML or Markdown files. Passes location.hash." >
 <meta name = "keywords" content = "JavaScript,Showdown,Markdown,GitHub,FOSS" >
 <meta name = "date" content = "2018-01-17" >
-<title>pushMe pullYou / Table of Contents</title>
+<title>predIQtiv ~ Alpha Vantage</title>
 
 <style>
-/* Copyright 2018 pushMe pullYou authors. MIT License */
+/* Copyright 2018 predIQtiv authors. MIT License */
 
 /* https://www.w3schools.com/colors/colors_names.asp // use colors and borders to help identify the scope of particular elements */
 
@@ -48,13 +48,15 @@
 
 
 	<div id = "divMenu" >
-<!--
+
 		<p>
-			<a href="http://pushme-pullyou.github.io/" target="_top" >Ladybug Tools</a> &raquo;
+			<a href="http://predIQtiv.github.io/" target="_top" ><img src=https://prediqtiv.github.io/images/predIQtiv.png height=36 ></a>
+<!--
 			<a href="http://www.ladybug.tools/spider/" target="_top" >&#x1f578;</a> &raquo;
 			<a href="../index.html" target="_"top style=font-size:24px; >&#x2302;</a> &raquo;
-		</p>
 -->
+		</p>
+
 		<h2>
 			<a id = "urlInfo" target="_top" ><img src="https://status.github.com/images/invertocat.png" height=18 title='Octocat' ></a>
 			<a href="" ><script> document.write( document.title )</script></a>
@@ -79,14 +81,14 @@
 			<hr>
 
 			<div title='many thanks!' ><a href=#../../pages/credits.md >Credits</a></div>
-			<div><a href=#../../pages/code-of-conduct.md >Code of Conduct</a></div>
-			<div><a href=#../../pages/contributing.md >Contributing</a></div>
-			<div><a href=#../../pages/license.md >License</a></div>
-			<div><a href=#../../pages/markdown-help.md >Markdown Help</a></div>
+			<div><a href=#pages/code-of-conduct.md >Code of Conduct</a></div>
+			<div><a href=#pages/contributing.md >Contributing</a></div>
+			<div><a href=#pages/license.md >License</a></div>
+			<div><a href=#pages/markdown-help.md >Markdown Help</a></div>
 			<div><a href="javascript:(function(){var script=document.createElement('script');script.onload=function(){var stats=new Stats();document.body.appendChild(stats.dom);requestAnimationFrame(function loop(){stats.update();requestAnimationFrame(loop)});};script.src='https://rawgit.com/mrdoob/stats.js/master/build/stats.min.js';document.head.appendChild(script);})()" title="Mr.doob's Stats.js appear in top left corner" >Show frames/second statistics</a></div>
 			<div><a href="https://api.github.com/rate_limit" target="_blank" title="Occasionaly this script breaks if you go over the GitHub API rate limit" >github rate limits</a></div>
 
-			<h1 onclick=divMenu.scrollTop=0; style=cursor:pointer;text-align:center; title='go to top' > &#x2766; </h1>
+			<p onclick=divMenu.scrollTop=0; style=cursor:pointer;text-align:center; title='go to top' ><img src=https://prediqtiv.github.io/images/five-boxes.png height=24 ></p>
 
 		</div>
 
@@ -103,11 +105,12 @@
 
 <script>
 
-	const user = 'pushme-pullyou';
-	const repo = '/pushme-pullyou.github.io';
+	const user = 'predIQtiv'
+	const repo = '/alpha-vantage-cookbook';
 	const pathRepo = '';
 
 	const uriDefaultFile = 'README.md';
+//	const uriDefaultFile = '../../plugins/view-github-issues.html'
 
 	const iconInfo = '<img src="https://status.github.com/images/invertocat.png" height=18 >';
 
