--- a/tootoo-users/prediqtiv-alpha-vantage/prediqtiv-alpha-vantage.html
+++ b/tootoo-users/prediqtiv-alpha-vantage/prediqtiv-alpha-vantage.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset = "utf-8" >
 <meta name = "viewport" content= "width=device-width, initial-scale=1">
-<meta name = "description" content = "This script allows you to list, open view all the files in all the Spider folders" >
+<meta name = "description" content = "List and view all the files in all the folders. File wrangler. Default index.html file. Opens HTML or Markdown files. Passes location.hash." >
 <meta name = "keywords" content = "JavaScript,Showdown,Markdown,GitHub,FOSS" >
-<meta name = "date" content = "2018-01-16" >
+<meta name = "date" content = "2018-01-17" >
 <title>predIQtiv ~ Alpha Vantage</title>
 
 <style>
@@ -113,11 +113,11 @@
 	const uriDefaultFile = 'README.md';
 //	const uriDefaultFile = '../../plugins/view-github-issues.html'
 
-	const iconInfo = '<img src="https://status.github.com/images/invertocat.png" height=18 > </a>';
+	const iconInfo = '<img src="https://status.github.com/images/invertocat.png" height=18 >';
 
 	const urlGitHubApiContents = 'https://api.github.com/repos/' + user + repo + '/contents/' + pathRepo;
 
-	const urlGitHubPage = 'https://rawgit.com/' + user + repo + '/master/';
+	let urlGitHubPage;
 
 	const urlGitHubSource = 'https://github.com/' + user + repo;
 //	const urlGitHubSource = 'https://github.com/' + user + repo + '/blob/master/' + pathRepo;
@@ -126,6 +126,9 @@
 	init();
 
 	function init() {
+
+		urlGitHubPage = location.host.startsWith( user + '.github.io' ) ? '' : 'https://rawgit.com/' + user + repo + '/master/';
+//console.log( 'urlGitHubPage', urlGitHubPage );
 
 		urlInfo.href = urlGitHubSource;
 
@@ -145,28 +148,27 @@
 
 		if ( !location.hash ) {
 
-			url = uriDefaultFile;
+			url = urlGitHubPage + uriDefaultFile;
 			ulc = url.toLowerCase();
 
 		} else {
-
-//https://rawgit.com/ladybug-tools/spider/master
-//https://rawgit.com/pushme-pullyou/pushme-pullyou.github.io/master/
-//https://rawgit.com/predIQtiv/alpha-vantage-cookbook/master
 
 			url = location.hash.slice( 1 );
 			ulc = url.toLowerCase();
 
 //console.log( 'url', url );
 
-//			crumbs = url.lastIndexOf( '/' ) > 0 ? url.slice( 0, url.lastIndexOf( '/' ) ) : '';			start =  url.lastIndexOf( '/' );
-			crumbs = url.startsWith( 'https://' ) ? url.slice( 59 ) : url;
+//https://rawgit.com/pushme-pullyou/pushme-pullyou.github.io/master/
+
+			start = ( 'https://rawgit.com/' + user + repo +'/master/' ).length;
+
+			crumbs = location.host.startsWith( 'pushme-pullyou.github.io' ) ? url : url.slice( start );
 			crumbs2 = crumbs.lastIndexOf( '/' ) > 0 ? crumbs.slice( 0, crumbs.lastIndexOf( '/' ) ) : '';
 
 //console.log( 'crumbs2',  crumbs2 );
+
 			setBreadcrumbs( crumbs2 );
 
-//			requestFile( urlGitHubApiContents + url.slice( 0, url.lastIndexOf( '/' ) + 1 ), callbackGitHubMenu );
 			requestFile( urlGitHubApiContents + crumbs2, callbackGitHubMenu );
 
 		}
@@ -283,13 +285,13 @@
 						'<td>' +
 
 // choose to access remote or local files
-//							'<a href=#' + urlGitHubPage + pathRepo + itemPath +
-							'<a href=#' + itemPath +
+							'<a href=#' + urlGitHubPage + pathRepo + itemPath +
+//							'<a href=#' + itemPath +
 
 							' title="' + item.size.toLocaleString() + ' bytes" > ' + item.name + '</a> ' +
 // choose to access remote or local files
-//							( item.path.endsWith( 'html' ) ? '<a href=' + urlGitHubPage + pathRepo + itemPath + ' >&#x2750;</a>' : '' ) +
-							( item.path.endsWith( 'html' ) ? '<a href=' + itemPath + ' >&#x2750;</a>' : '' ) +
+							( item.path.endsWith( 'html' ) ? '<a href=' + urlGitHubPage + pathRepo + itemPath + ' >&#x2750;</a>' : '' ) +
+//							( item.path.endsWith( 'html' ) ? '<a href=' + itemPath + ' >&#x2750;</a>' : '' ) +
 
 						'</td>' +
 
@@ -298,8 +300,8 @@
 				if ( ( !location.hash || location.hash.toLowerCase().endsWith( 'readme.md' ) )
 						&& item.path !== 'README.md' && item.name.toLowerCase() === 'readme.md' ) {
 
-//					location.hash = urlGitHubPage + pathRepo + itemPath;
-					location.hash = itemPath;
+					location.hash = urlGitHubPage + pathRepo + itemPath;
+//					location.hash = itemPath;
 
 				}
 
