--- a/tootoo-templates/basic-hamburger.html
+++ b/tootoo-templates/basic-hamburger.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" >
 <meta name="viewport" content = "width=device-width,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0" >
 <meta name=description content="Basic menu sliding" >
-<meta name=keywords content="JavaScript,GitHub,FOSS,3D,STEM" >
+<meta name=keywords content="JavaScript,GitHub,FOSS" >
 <meta name = "date" content = "2017-12-16" >
 <title>basic hamburger</title>
 <style>
@@ -29,17 +29,14 @@
 	input[ type = range ]::-moz-range-thumb { background-color: #888; border-radius: 0; width: 10px; }
 	input[ type = range ]::-webkit-slider-thumb { -webkit-appearance: none; background-color: #888; height: 20px; width: 10px; }
 
-	td { vertical-align: top; }
-
 	#divContainer { height: 100%; margin: 0 0 0 var( --mnu-width ); transition: margin-left .5s; position: relative; }
-	#divContents { height: 100%; left: 0; margin: 0 auto; max-width: 800px; right: 0;}
+	#divContents { height: 100%; left: 0; margin: 0 auto; max-width: 800px; right: 0; }
 
-
-	#divMenu { background-color: var( --mnu-back-color ); box-sizing: border-box; margin: 0;
-		overflow-x: hidden; padding: 30px 10px 30px 10px; position: fixed; top: 0; width: var( --mnu-width ); z-index: 1; transition: 0.5s; }
+	#divMenu { background-color: var( --mnu-back-color ); box-sizing: border-box; margin: 0px;
+		overflow-x: hidden; padding: 25px 10px 30px 10px; position: fixed; top: 0; width: var( --mnu-width ); z-index: 1; transition: left 0.5s; }
 
 	#hamburger { background-color: pink; box-sizing: border-box; cursor: pointer; font-size: 30px; left: calc( var( --mnu-width ) - 100px );
-		line-height: 30px; margin: 0; padding: 5px 15px 8px 10px; position: fixed; top: 0; transition: left .5s; z-index: 10; }
+		line-height: 30px; margin: 0; padding: 5px 15px 8px 10px; position: fixed; top: 0; transition: left 0.5s; z-index: 10; }
 
 </style>
 </head>
@@ -47,10 +44,26 @@
 
 	<div id = "divMenu" >
 
-<!--	<a href="" target="_top" ><img src="https://status.github.com/images/invertocat.png" height=18 ></a> -->
-		<div id = "divTitle" ></div>
+		<div>
+			<a href="../../index.html" target="_top" > &#x2302; </a> &raquo;
+			<a href="../index.html" target="_top" >parent</a> &raquo;
+		</div>
+
+		<h1>
+			<a href="https://github.com/ladybug-tools/spider/tree/master/cookbook" target="_top" ><img src="https://status.github.com/images/invertocat.png" height=18 ></a>
+			<a href="" ><script>
+			document.write( location.href.split( '/' ).pop().slice( 0, -5 ).replace( /-/g, ' ' ) );
+			//document.write( document.title );
+			</script></a>
+		</h1>
+
+		<p><script> document.write( document.head.querySelector( '[name=description]' ).content )</script></p>
 
 		<div id = "divMenuItems" ></div>
+
+		<hr>
+
+		<h1 onclick=divMenu.scrollTop=0; style=cursor:pointer;text-align:center; title='go to top' > &#x2766; </h1>
 
 	</div>
 
@@ -60,7 +73,7 @@
 
 	</div>
 
-	<div id = "hamburger" onclick=toggleNav(); > slide &#9776;  </div>
+	<div id = "hamburger" onclick=toggleNav(); > slide &#9776; </div>
 
 <script>
 
@@ -72,11 +85,6 @@
 
 	function init() {
 
-		divTitle.innerHTML =
-			'<h2><a href = "" >' + document.title + '</a></h2>' +
-			'<p>' + document.head.querySelector( '[name=description]' ).content + '</p>' +
-		'';
-
 		txt = 'lorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem. ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?';
 
 		divContents.innerHTML += b + txt;
@@ -87,26 +95,21 @@
 
 	function toggleNav() {
 
-		const width = getComputedStyle(document.documentElement).getPropertyValue( '--mnu-width' );
+		const left = 'calc( var( --mnu-width ) - 100px )';
 
-		if ( !divMenu.style.width || divMenu.style.width === width ) {
+		if ( hamburger.style.left === '' || hamburger.style.left === left ) {
 
-			divMenu.style.width = '0';
-			divMenu.style.padding = '0';
+			divMenu.style.left = 'calc( -1 * var( --mnu-width ) - 20px )';
 			hamburger.style.left = '-100px';
-			divContainer.style.marginLeft = '0';
 
 		} else {
 
-			divMenu.style.width = width;
-			divMenu.style.padding = '30px 10px 0 10px';
-			hamburger.style.left = 'calc( var( --mnu-width ) - 100px )';
-			divContainer.style.marginLeft = width;
+			divMenu.style.left = 0;
+			hamburger.style.left = left;
 
 		}
 
 	}
-
 
 </script>
 </body>
