--- a/tootoo-templates/basic-html.html
+++ b/tootoo-templates/basic-html.html
@@ -4,8 +4,8 @@
 <meta charset = "utf-8" >
 <meta name = "viewport" content= "width=device-width, initial-scale=1">
 <meta name = "description" content = "Basic HTML template" >
-<meta name = "keywords" content = "JavaScript,GitHub,FOSS,3D,STEM" >
-<meta name = "date" content = "2017-12-15" >
+<meta name = "keywords" content = "JavaScript,GitHub,FOSS" >
+<meta name = "date" content = "2018-01-19" >
 <title></title>
 <style>
 
@@ -33,6 +33,8 @@
 
 		</h1>
 
+		<div><script> document.write( document.head.querySelector( '[name=description]' ).content )</script></div>
+
 		<div id = "divContents" >
 
 			<p><button onclick=thing(); >button</button></p>
@@ -52,18 +54,12 @@
 
 	function init() {
 
-
-
-		divTitle.innerHTML =
-			'<h2>' +
-				'<a  href = "" >' + location.href.split( '/' ).pop().slice( 0, -5 ).replace( /-/g, ' ' ) + '</a>' +
-			'</h2>';
-
 		txt = 'lorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem. ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?';
 
 		divContents.innerHTML += b + txt;
 
 	}
+
 
 </script>
 </body>
