--- a/tootoo-users/ladybug-tools-spider/ladybug-tools-spider.html
+++ b/tootoo-users/ladybug-tools-spider/ladybug-tools-spider.html
@@ -44,7 +44,7 @@
 </style>
 </head>
 <body>
-<script src = "https://cdn.rawgit.com/showdownjs/showdown/1.8.5/dist/showdown.min.js" ></script>
+<script src = "https://cdn.rawgit.com/showdownjs/showdown/1.8.6/dist/showdown.min.js" ></script>
 
 
 	<div id = "divMenu" >
@@ -113,11 +113,11 @@
 	const uriDefaultFile = 'README.md';
 //	const uriDefaultFile = '../../plugins/view-github-issues.html'
 
-	const iconInfo = '<img src="https://status.github.com/images/invertocat.png" height=18 > </a>';
+	const iconInfo = '<img src="https://status.github.com/images/invertocat.png" height=18 >';
 
 	const urlGitHubApiContents = 'https://api.github.com/repos/' + user + repo + '/contents/' + pathRepo;
 
-	const urlGitHubPage = 'https://rawgit.com/' + user + repo + '/master/';
+	let urlGitHubPage;
 
 	const urlGitHubSource = 'https://github.com/' + user + repo;
 //	const urlGitHubSource = 'https://github.com/' + user + repo + '/blob/master/' + pathRepo;
@@ -126,6 +126,9 @@
 	init();
 
 	function init() {
+
+		urlGitHubPage = location.host.startsWith( user + '.github.io' ) ? '' : 'https://rawgit.com/' + user + repo + '/master/';
+//console.log( 'urlGitHubPage', urlGitHubPage );
 
 		urlInfo.href = urlGitHubSource;
 
@@ -145,26 +148,27 @@
 
 		if ( !location.hash ) {
 
-			url = uriDefaultFile;
+			url = urlGitHubPage + uriDefaultFile;
 			ulc = url.toLowerCase();
 
 		} else {
 
-//https://rawgit.com/ladybug-tools/spider/master
-
 			url = location.hash.slice( 1 );
 			ulc = url.toLowerCase();
 
-console.log( 'url', url );
+//console.log( 'url', url );
 
-//			crumbs = url.lastIndexOf( '/' ) > 0 ? url.slice( 0, url.lastIndexOf( '/' ) ) : '';			start =  url.lastIndexOf( '/' );
-			crumbs = url.startsWith( 'https://' ) ? url.slice( 47 ) : url;
+//https://rawgit.com/pushme-pullyou/pushme-pullyou.github.io/master/
+
+			start = ( 'https://rawgit.com/' + user + repo +'/master/' ).length;
+
+			crumbs = location.host.startsWith( 'pushme-pullyou.github.io' ) ? url : url.slice( start );
 			crumbs2 = crumbs.lastIndexOf( '/' ) > 0 ? crumbs.slice( 0, crumbs.lastIndexOf( '/' ) ) : '';
 
-console.log( 'crumbs2',  crumbs2 );
+//console.log( 'crumbs2',  crumbs2 );
+
 			setBreadcrumbs( crumbs2 );
 
-//			requestFile( urlGitHubApiContents + url.slice( 0, url.lastIndexOf( '/' ) + 1 ), callbackGitHubMenu );
 			requestFile( urlGitHubApiContents + crumbs2, callbackGitHubMenu );
 
 		}
@@ -197,7 +201,6 @@ console.log( 'crumbs2',  crumbs2 );
 	function getFolderContents( path = '' ) {
 
 		const url = urlGitHubApiContents + path;
-//		const url = path;
 
 		requestFile( url, callbackGitHubMenu );
 
@@ -314,6 +317,7 @@ console.log( 'crumbs2',  crumbs2 );
 
 	function callbackMarkdown( xhr ){
 
+		showdown.setFlavor('github');
 		const converter = new showdown.Converter();
 		const response = xhr.target.response;
 		const html = converter.makeHtml( xhr.target.responseText );
